--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Click on 'Deploy side'
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
     
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<div class="banner-wrap">
   <header class="mb-auto">
     <div>
       <h3 class="float-md-start mb-0">Portfolio</h3>
