--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ Click on 'Deploy side'
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
   </head>
-  <body class="d-flex h-100 text-center text-white bg-dark">
+  <body class="bg-dark">
     
 <div class="banner-wrap vh-100">
-  <header class="mb-auto">
+  <header class="p-3">
     <div>
       <h3 class="float-md-start mb-0">Portfolio</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
