--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Click on 'Deploy side'
   <body class="bg-dark">
     
 <div class="banner-wrap vh-100">
-  <header class="p-3">
+  <header class="p-3 text-white">
     <div>
       <h3 class="float-md-start mb-0">Portfolio</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
