--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Click on 'Deploy side'
   </head>
   <body class="bg-dark">
     
-<div class="banner-wrap vh-100">
+
   <header class="p-3 text-white">
     <div>
       <h3 class="float-md-start mb-0">Portfolio</h3>
@@ -78,7 +78,8 @@ Click on 'Deploy side'
     </div>
   </header>
 
-  <main class="px-3">
+  <div class="banner-wrap vh-100 text-white">
+  <main class="d-flex flex-column align-items-center justify-content-center">
     <h1>Cover your page.</h1>
     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
     <p class="lead">
