Set Align and Justify

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Click on 'Deploy side'
   </header>
 
   <div class="banner-wrap vh-100 text-white">
-  <main class="d-flex flex-column align-items-center justify-content-center">
+  <main class="d-flex flex-column align-items-center justify-content-center h-100">
     <h1>Cover your page.</h1>
     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
     <p class="lead">
