--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ Click on 'Deploy side'
 
   <div class="banner-wrap vh-100 text-white">
   <main class="d-flex flex-column align-items-center justify-content-center h-100 text-center">
-    <h1>Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <h1>I am Siyamethemba Mpahlwa</h1>
+    <p class="lead">With expertise in data-driven problem-solving and a multidisciplinary background in technology, science, and accounting, I excel at transforming complex challenges into clear, actionable solutions. From coding and analytics to leadership and strategy, my work reflects a passion for connecting ideas and driving results. Explore my journey and let’s create meaningful change together!</p>
     <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
     </p>
