Added about info

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Click on 'Deploy side'
   <div class="banner-wrap vh-100 text-white">
   <main class="d-flex flex-column align-items-center justify-content-center h-75 text-center">
     <h1 class="display-1">I am Siyamethemba Mpahlwa</h1>
-    <p class="lead">Fullstack Developer. Accountant. Entepreneur. Physicist.</p>
+    <p class="lead">Fullstack Developer. Accountant. Entrepreneur. Physicist.</p>
     <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
     </p>
