--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Click on 'Deploy side'
   <main class="d-flex flex-column align-items-center justify-content-center h-75 text-center">
     <h1 class="display-1">I am Siyamethemba Mpahlwa</h1>
     <p class="lead">Fullstack Developer. Accountant. Entrepreneur. Physicist.</p>
-    <p class="lead">
+    <p class="lead"> Academic experience in physics, computer science, linguistics, and accounting. </p>
       <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
     </p>
   </main>
