linked style.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Portfolio | Siyamethemba Mpahlwa</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
+    <link rel="stylesheet" href="style.css">
 
     
 <!-- 
