--- a/index.html
+++ b/index.html
@@ -68,18 +68,20 @@ Click on 'Deploy side'
   <body class="bg-dark">
     
 
-  <header class="p-3 text-white">
-    <div>
-      <h3 class="float-md-start mb-0">Portfolio</h3>
-      <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Contact</a>
-      </nav>
-    </div>
-  </header>
+ 
 
   <div class="banner-wrap vh-100 text-white">
+    <div class="overlay"></div>
+    <header class="px-5 p-3 text-white">
+      <div>
+        <h3 class="float-md-start text-center">Portfolio</h3>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Contact</a>
+        </nav>
+      </div>
+    </header>
   <main class="d-flex flex-column align-items-center justify-content-center h-100 text-center">
     <h1 class="display-2">I am Siyamethemba Mpahlwa</h1>
     <p class="lead">Fullstack Developer. Accountant. Entrepreneur. Physicist.</p>
