--- a/index.html
+++ b/index.html
@@ -65,11 +65,8 @@ Click on 'Deploy side'
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
   </head>
-  <body class="bg-dark">
+  <body class="bg-light">
     
-
- 
-
   <div class="banner-wrap vh-100 text-white">
     <div class="overlay"></div>
     <header class="px-5 p-3 text-white">
@@ -135,7 +132,32 @@ Push your local code to the remote repository's master branch.
 git push -u origin master    
 
 -->
+<section>
+<div class="container p-5">
+            <div class="card">
+             <div class="card-body">
+              <div class="row g-2">
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-md-6"><picture>"./assets/banner.jpg"</picture></div>
+                      <div class="col-md-6">
+                        <p>Name: Siyamethemba Mpahlwa</p>
+                        <p>Profile:</p>
+                        <p>Email: mpahlwasm@gmail.com</p>
+                        <p>Phone: 063***2946</p>
+                        <p>Skills:</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <h1>About Me</h1>
+                  </div>
+              </div>
+             </div>
+         </div>
+        </div>
 
+</section>
 
   </body>
 </html>
