--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ Click on 'Deploy side'
     </p>
   </main>
 
-  <footer class="mt-auto text-white-50">
+  <!-- <footer class="mt-auto text-white-50">
     <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-  </footer>
+  </footer> -->
 </div>
     
 
@@ -135,22 +135,47 @@ git push -u origin master
 <section>
 <div class="container p-5">
             <div class="card">
-             <div class="card-body">
+             <div class="card-body p-5">
               <div class="row g-2">
                   <div class="col-md-6">
-                    <div class="row">
-                      <div class="col-md-6"><picture>"./assets/banner.jpg"</picture></div>
-                      <div class="col-md-6">
-                        <p>Name: Siyamethemba Mpahlwa</p>
-                        <p>Profile:</p>
-                        <p>Email: mpahlwasm@gmail.com</p>
-                        <p>Phone: 063***2946</p>
-                        <p>Skills:</p>
+                    <div class="row p-3">
+                      <div class="col-md-5">
+                        <img src="https://media.licdn.com/dms/image/v2/D4D03AQHOFsV50kZxWA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1719556536527?e=1739404800&v=beta&t=u2AzdanwgRsqKBwQ0-F_pmbqLjsa-XLco_Uyf3aV7RY" alt="" class="img-fluid">
+                      </div>
+                      <div class="col-md-7">
+                        <p><strong>Name:</strong> Siyamethemba Mpahlwa</p>
+                        <p><strong>Profile:</strong> Full Stack Developer</p>
+                        <p><strong>Email:</strong> mpahlwasm@gmail.com</p>
+                        <p><strong>Phone:</strong> +2763***2946</p>
+                        <p><strong>Skills:</strong> <span class="badge rounded-pill bg-dark text-wrap">Python (scikit-learn, NumPy, SciPy, pandas, matplotlib)
+                          </span>
+                          <span class="badge rounded-pill bg-dark ">Word</span>
+                          <span class="badge rounded-pill bg-dark ">Excel</span>
+                          <span class="badge rounded-pill bg-dark ">Java</span>
+                          <span class="badge rounded-pill bg-dark ">​SQL</span>
+                          <span class="badge rounded-pill bg-dark ">R</span>
+                          <span class="badge rounded-pill bg-dark ">HTML</span>
+                          <span class="badge rounded-pill bg-dark ">C++</span>
+                          <span class="badge rounded-pill bg-dark ">Machine Learning</span>
+                          <span class="badge rounded-pill bg-dark ">git</span>
+                          <span class="badge rounded-pill bg-dark ">JavaScript</span>
+                          <span class="badge rounded-pill bg-dark ">Firebase</span>
+                          <span class="badge rounded-pill bg-dark ">Object Oriented Programming</span>
+                          <span class="badge rounded-pill bg-dark ">ReactJS</span>
+                          <span class="badge rounded-pill bg-dark ">NodeJS</span>
+                          <span class="badge rounded-pill bg-dark ">Redux</span>
+                          <span class="badge rounded-pill bg-dark ">MongoDB</span>
+                          <span class="badge rounded-pill bg-dark ">Express</span>
+
+                        </p>
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <h1>About Me</h1>
+                  <div class="col-md-6 mt-3">
+                    <h1 class="text-center text-md-start"><mark>About Me</mark></h1>
+                    <p class="lead">
+                      I am an aspiring medical physicist with a strong foundation in physics, computer science, and problem-solving through data and algorithms. I simplify complex ideas for diverse audiences and have leadership experience in mentoring, tutoring, and cultural initiatives.
+                    </p>
                   </div>
               </div>
              </div>
@@ -158,6 +183,26 @@ git push -u origin master
         </div>
 
 </section>
-
+<div class="container p-5">
+  <h1 class="text-center"><mark>Projects</mark></h1>
+  <div class="row">
+    <div class="col-md-4 mt-3">
+      <div class="card">
+        <img
+          src="https://zaiocontent.s3.eu-west-2.amazonaws.com/images+of+courses/css_netflix.png"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Netflix Landing Page</h5>
+          <p class="card-text">Built this with HTML & CSS</p>
+          <a href="#" class="btn btn-primary"><i class="bi bi-globe">View Website</i></a>
+          <a href="#" class=""><i class="bi bi-code-slash ">View Code</i>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
   </body>
 </html>
