--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ Click on 'Deploy side'
 
 -->
 
-
-
+<!-- BOOTSTRAP ICONS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Bootstrap core CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
@@ -195,14 +195,33 @@ git push -u origin master
         />
         <div class="card-body">
           <h5 class="card-title">Netflix Landing Page</h5>
-          <p class="card-text">Built this with HTML & CSS</p>
-          <a href="#" class="btn btn-primary"><i class="bi bi-globe">View Website</i></a>
-          <a href="#" class=""><i class="bi bi-code-slash ">View Code</i>
+          <p class="card-text">Built with HTML & CSS</p>
+          <a href="https://mpahlwasmza.netlify.app/" target="_blank" class="btn btn-primary"><i class="bi bi-globe"> Netflix</i></a>
+          <a href="https://github.com/IrrationalSia/zaio-git-netflix.git" target="_blank" class="btn btn-outline-dark"><i class="bi bi-code-slash "> Code</i></a>
         </div>
       </div>
     </div>
   </div>
 </div>
+</section>
+<!-- CONNECT SECTION -->
+<section>
+  <div class="container p-5">
+    <div class="card p-3">
+      <div class="card-body px-5 text-center">
+        <h1><mark>Let's Connect</mark></h1>
+        <p class="lead">Would love to connect with potential employers, collabrators, and developers alike.</p>
+        <p class="fs-2">
+          <a target="_blank" href="https://github.com/IrrationalSia" class="no-underline"><i class="bi bi-github m-2"></i></a>
+          <a target="_blank" href="mailto:mpahlwasm@gmail.com" class="no-underline"><i class="bi bi-envelope m-2"></i></a>
+          <a target="_blank" href="https://x.com/siyamethembaiii/" class="no-underline"><i class="bi bi-twitter-x m-2"></i></a>
+          <a target="_blank" href="https://linkedin.com/in/siyamethemba-mpahlwa" class="no-underline"><i class="bi bi-linkedin m-2"></i></a>
+        
+        </p>
+      </div>
+    </div>
+  </div>
+
 </section>
   </body>
 </html>
