--- a/index.html
+++ b/index.html
@@ -69,17 +69,19 @@ Click on 'Deploy side'
     
   <div class="banner-wrap vh-100 text-white">
     <div class="overlay"></div>
-    <header class="px-5 p-3 text-white">
+    <header class="px-5 p-3 text-white fixed-top">
       <div>
         <h3 class="float-md-start text-center">Portfolio</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link active" aria-current="page" href="#home">Home</a>
+          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="#projects">Projects</a>
+          <a class="nav-link" href="#connect">Contact</a>
         </nav>
       </div>
     </header>
-  <main class="d-flex flex-column align-items-center justify-content-center h-100 text-center">
+  
+  <main class="d-flex flex-column align-items-center justify-content-center h-100 text-center" id="home">
     <h1 class="display-2">I am Siyamethemba Mpahlwa</h1>
     <p class="lead">Fullstack Developer. Accountant. Entrepreneur. Physicist.</p>
     <p class="lead"> Academic experience in physics, computer science, linguistics, and accounting. </p>
@@ -132,7 +134,7 @@ Push your local code to the remote repository's master branch.
 git push -u origin master    
 
 -->
-<section>
+<section id="about">
 <div class="container p-5">
             <div class="card">
              <div class="card-body p-5">
@@ -183,6 +185,7 @@ git push -u origin master
         </div>
 
 </section>
+<section id="projects">
 <div class="container p-5">
   <h1 class="text-center"><mark>Projects</mark></h1>
   <div class="row">
@@ -205,7 +208,7 @@ git push -u origin master
 </div>
 </section>
 <!-- CONNECT SECTION -->
-<section>
+<section id="connect">
   <div class="container p-5">
     <div class="card p-3">
       <div class="card-body px-5 text-center">
@@ -253,5 +256,13 @@ git push -u origin master
   </div>
 
 </section>
+<script>
+    window.addEventListener("scroll", () => {
+      const header = document.querySelector("header");
+      header.classList.toggle(".scrolling", window.scrollY>0);
+    }
+
+    )
+</script>
   </body>
 </html>
